Fix burger alignment

--- a/themes/hlcchl/compiled/style-human.css
+++ b/themes/hlcchl/compiled/style-human.css
@@ -558,7 +558,7 @@ a:hover {
   border: none;
 }
 #site-navigation .container {
-  width: 970px;
+  width: 65%;
 }
 #site-navigation li {
   display: inline;
